--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>Initial Version</h1>
     <p>This is the initial version of the HTML file.</p>
     <p>Added more content to the HTML file</p>
+    <p>Adding content from the add-content branch</p>
 </body>
 </html>
