--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <title>Git and GitHub Hands-on</title>
 </head>
 <body>
-    <h1>Initial Version</h1>
+    <h1>Initial Version 1</h1>
     <p>This is the initial version of the HTML file.</p>
-    <p>Added more content to the HTML file</p>
-    <p>Adding content from the add-content branch</p>
 </body>
 </html>
